2009-01-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.js: Style.

	* src/core/exmpp_known_nss.erl.js, src/core/exmpp_known_elems.erl.js,
	src/core/exmpp_known_attrs.erl.js: Style.

	* Makefile.win32, include/Makefile.win32,
	include/internal/Makefile.win32, src/Makefile.win32,
	src/Emakefile.in.js, ebin/Makefile.win32, ebin/exmpp.app.js: Add
	Makefiles for Windows environments.

2009-01-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_iq.erl: Use correct eDoc types.

	* src/server/exmpp_server_sasl.erl (next_step/1): Mechanism is
	returned as a string() again. It may go back to binary() in a future
	version but the response should be binary() too in this case.

	* include/internal/exmpp_xmpp.hrl, src/core/exmpp_jid.erl,
	testsuite/jid.erl: Rename full_jid to orig_jid because it may not
	contain a full JID but a bare JID.

	* include/internal/exmpp_xmpp.hrl: Style.

	* src/core/exmpp_jid.erl: Remove the parse_list/2 function because
	it's not used anymore; this fixes a warning. A lot of fixes and
	updates to the documentation; this unbreak the build. Style and typos.
	(jid_to_binary/3, bare_jid_to_binary/2): Fix a bug where a mix between
	binary() and string() among arguments would cause a crash.

2009-01-22  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/core/exmpp_message.erl: Use atoms for common message
	types (normal, chat, groupchat, headline).

	* include/internal/exmpp_xmpp.hrl, include/exmpp_xmpp.hrl,
	src/core/exmpp_jid.erl, testsuite/jid.erl: Change in internal
	JID representation. Instead of storing the three raw components
	separately, we keep the original JID in one chunk. The
	intention is to save some memory. Most of the time we already
	have the raw JID (for example coming from a stanza), so we
	avoid the need of allocating a new binary when serializing (we