@@ -1,8 +1,6 @@
 # $Id$
 
-BUILT_SOURCES = exmpp_known_nss.hrl					\
-		exmpp_known_elems.hrl					\
-		exmpp_known_attrs.hrl
+BUILT_SOURCES = exmpp_known_nss.hrl exmpp_known_elems.hrl exmpp_known_attrs.hrl
 
 all: $(BUILT_SOURCES)
 
